<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Query_US"
            android:textColor="#00FF00"
            android:showAsAction="never"
            android:title="@string/query_us" />
        <item
            android:id="@+id/Query_CA"
            android:textColor="#00FF00"
            android:showAsAction="never"
            android:title="@string/query_ca" />
        <item
            android:id="@+id/Query_FR"
            android:textColor="#00FF00"
            android:showAsAction="never"
            android:title="@string/query_fr" />
        <item
            android:id="@+id/Query_AU"
            android:textColor="#00FF00"
            android:showAsAction="never"
            android:title="@string/query_au" />
        <item
            android:id="@+id/Query_BR"
            android:textColor="#00FF00"
            android:showAsAction="never"
            android:title="@string/query_br" />
    </group>
</menu>