<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ABBDD0"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_weight="0.55">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Numero Orden :  "
            android:id="@+id/id_orden_servicio"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:padding="1dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/textnumero_sensor_estacion"
            android:width="@dimen/abc_alert_dialog_button_bar_height"
            android:layout_gravity="right"
            android:singleLine="false" />



        <ImageButton
            android:id="@+id/menos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ABBDD0"
            android:src="@android:drawable/btn_minus"
            android:contentDescription="@string/app_name"
            android:textAlignment="center"/>

        <ImageButton
            android:id="@+id/mas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ABBDD0"
            android:src="@android:drawable/btn_plus"
            android:contentDescription="@string/app_name"

            android:textAlignment="center" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:gravity="center_vertical|center_horizontal">

        <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
            android:layout_height="265dp">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:orientation="vertical">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Año"
                        android:id="@+id/textView4"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0"
                        android:padding="5dip" />


                    <EditText  android:id="@+id/textViewanno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action_ano"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#ffffffff"
                        android:textColor="#ffffffff">
                    </EditText>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/action_mes"
                        android:id="@+id/textView"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0"
                        android:padding="3dip"  />

                    <EditText  android:id="@+id/textmes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action_mes"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1" android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#ffffffff"
                        android:textColor="#ffffffff">
                    </EditText>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/action_dia"
                        android:id="@+id/textView6"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0"
                        android:padding="5dip"/>

                    <EditText android:id="@+id/textViewdia" android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action_dia"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1" android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#ffffffff"
                        android:textColor="#ffffffff">
                    </EditText>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/action_hora"
                        android:id="@+id/textView8"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0"
                        android:padding="5dip"/>

                    <EditText android:id="@+id/textViewhora" android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action_hora"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1" android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#ffffffff"
                        android:textColor="#ffffffff">
                    </EditText>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/action_humedad"
                        android:id="@+id/textView10"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0"
                        android:padding="5dip" />

                    <EditText android:id="@+id/textViewHumedad" android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action_humedad"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1" android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#ffffffff"
                        android:textColor="#ffffffff">
                    </EditText>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/action_temperatura"
                        android:id="@+id/textView12"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0"
                        android:padding="5dip" />

                    <EditText android:id="@+id/textViewTemperatura"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action_temperatura"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1" android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#ffffffff"
                        android:textColor="#ffffffff">
                    </EditText>



                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>



</LinearLayout>